samples/_failures_safe/1761403909_2c3b3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca6bcd7c.c: In function ‘main’:
./samples/SAFE/__tmp_ca6bcd7c.c:151:20: error: missing terminating " character
  151 |             printf("Invalid
      |                    ^~~~~~~~
./samples/SAFE/__tmp_ca6bcd7c.c:151:13: error: expected expression at end of input
  151 |             printf("Invalid
      |             ^~~~~~
./samples/SAFE/__tmp_ca6bcd7c.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca6bcd7c.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca6bcd7c.c:151:13: error: expected declaration or statement at end of input
